--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,6 +24,23 @@ body {
 .content {
   padding: 40px 0;
 
+  &__error__info {
+    margin: 100px auto;
+    width: 500px;
+    text-align: center;
+
+    h2 {
+      font-size: 32px;
+      font-weight: 700;
+      margin-bottom: 15px;
+    }
+
+    p {
+      font-size: 22px;
+      line-height: 1.5;
+    }
+  }
+
   &__title {
     font-weight: 800;
     font-size: 38px;
